--- a/index.html
+++ b/index.html
@@ -6,97 +6,138 @@
     <meta name="description" content="Vaanguard- Leading the Future of Success. Premier strategic investment and business acceleration firm for high-growth enterprises.">
     <meta name="keywords" content="business growth, strategic investment, mergers, corporate consulting, digital transformation">
 <!-- ADD META TAG FOR AUTHOR AND YOUR NAME-->
+    <meta name="author" content="Beatriz Rogel">
+
     <title>Vanguard | Leading the Future of Success</title>
 <!-- ADD LINK TO YOUR CSS-->
+    <link rel="stylesheet" href="styles.css">
+</head>
 </head>
 
 <body>
 <!-- WRAP CONTENT IN VALIDATED, SEMANTIC HTML5 (SEE HINTS FOLDER LINKED TO IN THE CANVAS INSTRUCTIONS)-->
-    Vaanguard
-        Main Navigation
-            About
-            Services
-            Contact
+<header class="container">
+    <h1>Vaanguard</h1>
+</header>
+<section id="main-navigation" class="container">
+    <h2>Main Navigation</h2>
+    <nav>
+        <button class="mobile-menu" aria-label="Open Menu">&#9776;</button>
+        <ul class="nav-links">
+            <li><a href="#innovation">Innovation &amp; Investment</a></li>
+            <li><a href="#expertise">Our Expertise</a></li>
+            <li><a href="#services">What We Offer</a></li>
+            <li><a href="#results">Proven Results</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+        </ul>
+    </nav>
+</section>
+<main>
+   
+    <section id="innovation" class="container">
+        <h2>Innovation &amp; Investment</h2>
+        <p>We empower businesses to lead the future with high-impact strategies, market intelligence, and financial solutions that drive success.</p>
+        <a href="#contact" class="cta-btn">Request a Consultation</a>
+    </section>
+    <section id="expertise" class="container">
+        <h2>Our Expertise. Your Edge.</h2>
+        <p>We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment strategies to propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic expertise delivers results.</p>
+    </section>
+    <section id="services" class="container">
+        <h2>What We Offer</h2>
 
-        Innovation & Investment
-        We empower businesses to lead the future with high-impact strategies, market intelligence, and financial solutions that drive success.
-        Request a Consultation
+        <article>
+            <h3>Strategic Growth Consulting</h3>
+            <p>Unlock new revenue streams and optimize market expansion strategies.</p>
+        </article>
 
-        Our Expertise. Your Edge.
-        We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment strategies to propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic expertise delivers results.'
+        <article>
+            <h3>High-Impact Investment Solutions</h3>
+            <p>Maximize returns with data-driven portfolio management.</p>
+        </article>
 
-        What We Offer
-            Strategic Growth Consulting
-            Unlock new revenue streams and optimize market expansion strategies.
+        <article>
+            <h3>Business Acceleration &amp; Mergers</h3>
+            <p>Identify opportunities for rapid growth and high-value acquisitions.</p>
+        </article>
 
-            High-Impact Investment Solutions
-            Maximize returns with data-driven portfolio management.
+        <article>
+            <h3>Digital Transformation</h3>
+            <p>Stay at the forefront of industry advancements with AI, blockchain, and automation.</p>
+        </article>
 
-            Business Acceleration & Mergers
-            Identify opportunities for rapid growth and high-value acquisitions.
+        <article>
+            <h3>Executive Advisory Services</h3>
+            <p>Personalized insights and leadership support for C-suite executives and high-net-worth investors.</p>
+        </article>
 
-            Digital Transformation
-            Stay at the forefront of industry advancements with AI, blockchain, and automation.
+        <article>
+            <h3>Corporate Innovation</h3>
+            <p>Strategic implementation of new ideas, technologies, and processes to drive business growth and adapt to evolving market demands.</p>
+        </article>
+    </section>    
+    <section id="results" class="container">
+        <h2>Proven Results</h2>
+        <p>Our data-driven strategies have delivered outstanding ROI, leading to significant revenue growth.</p>
+        <h3>Profits</h3>
+        <table>
+            <caption>Yearly Revenue Growth</caption>
+            <thead>
+                <tr>
+                    <th>Year</th>
+                    <th>Revenue ($M)</th>
+                    <th>Growth (%)</th>
+                </tr>
+            </thead>
 
-            Exclusive Executive Advisory Services
-            Personalized insights and leadership support for C-suite executives and high-net-worth investors.
+            <tbody>
+                <tr><td>2020</td><td>$120M</td><td>30%</td></tr>
+                <tr><td>2021</td><td>$180M</td><td>50%</td></tr>
+                <tr><td>2022</td><td>$250M</td><td>70%</td></tr>
+                <tr><td>2023</td><td>$340M</td><td>85%</td></tr>
+                <tr><td>2024</td><td>$420M</td><td>100%</td></tr>
+            </tbody>
+        </table>
+        <h3>Growth</h3>
+        <!-- CODE PROVIDED FOR YOU, NOTHING TO DO FOR THE BAR CHART IN THE HTML-->
+        <div id="bar-chart">
+            <div class="bar" data-year="2020" style="--height: 30%;"></div>
+            <div class="bar" data-year="2021" style="--height: 50%;"></div>
+            <div class="bar" data-year="2022" style="--height: 70%;"></div>
+            <div class="bar" data-year="2023" style="--height: 85%;"></div>
+            <div class="bar" data-year="2024" style="--height: 100%;"></div>
+        </div>
+    </section>
+    <section id="contact" class="container">
+        <h2>Contact Us</h2>
+        <p>Want to take your business to the next level? Get in touch with our elite team today.</p>
+        <form>
+            <label for="full-name">Full Name</label>
+            <input type="text" id="full-name" name="full-name" required>
 
-            Corporate Innovation
-            Strategic implementation of new ideas, technologies, and processes to drive business growth, enhance competitive advantage, and adapt to evolving market demands.
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email" required>
 
-            Proven Results
-            Our data-driven strategies have delivered outstanding ROI, leading to significant revenue growth.
+            <label for="company">Company Name</label>
+            <input type="text" id="company" name="company">
 
-                Profits
-                Year
-                Revenue ($M)
-                Growth (%)
+            <label for="industry">Industry</label>
+            <input type="text" id="industry" name="industry">
 
-                2020
-                $120M
-                30%
+            <label for="message">How can we help you?</label>
+            <textarea id="message" name="message" rows="5"></textarea>
 
-                2021
-                $180M
-                50%
+            <button type="submit">Submit</button>
+        </form>
+    </section>
 
-                2022
-                $250M
-                70%
+</main>
+<footer class="container">
+    <p>For educational purposes only.</p>
+    <p>Email: info@vaanguard.com</p>
+    <p>Phone: 480.123.4567</p>
+</footer>
 
-                2023
-                $340M
-                85%
+</body>
+</html>
 
-                2024
-                $420M
-                100%
-
-                Growth
-<!-- CODE PROVIDED FOR YOU, NOTHING TO DO FOR THE BAR CHART IN THE HTML-->
-                    <div  id="bar-chart">
-                        <div class="bar" data-year="2020" style="--height: 30%;"></div>
-                        <div class="bar" data-year="2021" style="--height: 50%;"></div>
-                        <div class="bar" data-year="2022" style="--height: 70%;"></div>
-                        <div class="bar" data-year="2023" style="--height: 85%;"></div>
-                        <div class="bar" data-year="2024" style="--height: 100%;"></div>
-                    </div>
-
-        Contact Us
-        Want to take your business to the next level? Get in touch with our elite team today.
-
-            Full Name
-
-            Email Address
-
-            Company Name
-
-            Industry
-
-            How can we help you?
-
-            Submit
-
-        For educational purposes only. 
-        Email: info@vaanguard.com 
-        Phone: 480.123.4567
